# PDTSP

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  pdtsp.pro
.github/workflows/: CI_Build.yml
PDP-HGS/: PDP-HGS.pro  main.cpp
PDP-HGS/hgsadc/: adcpopulation.cpp  adcpopulation.h  hgsadc.cpp  hgsadc.h  problem.h  solution.h
PDP-HGS/pdp/: instancereader.cpp  instancereader.h  pdpeducate.cpp  pdpeducate.h  pdpinstance.cpp  pdpinstance.h  pdpnode.h  pdproute.cpp  pdproute.h  pdprouteinfo.cpp  pdprouteinfo.h  pdpsolution.cpp  pdpsolution.h
PDP-HGS/pdp/moves/: pdp2koptmove.cpp  pdp2koptmove.h  pdp2optmove.cpp  pdp2optmove.h  pdp4optmove.cpp  pdp4optmove.h  pdpbsmove.cpp  pdpbsmove.h  pdpmove.h  pdpmoveevaluation.cpp  pdpmoveevaluation.h  pdporoptmove.cpp  pdporoptmove.h  pdprelocatemove.cpp  pdprelocatemove.h
PDP-HGS/pdp/moves/balas_simonetti/: bscache.cpp  bscache.h  bsgraph.cpp  bsgraph.h  util.cpp  util.h
PDP-HGS/utils/: application.cpp  application.h  random.cpp  random.h
PDP-RR/: CMakeLists.txt  PDP-RR.pro  README.md  application.cpp  application.h  instance.cpp  instance.h  operators.cpp  operators.h  random.cpp  random.h  solver.cpp  solver.h
Test/: ci_hgs_U159C.exp  ci_rr_U159C.exp  compare_results.py
instances/: README.md
instances/Dumitrescu/: .directory  prob10a.sol  prob10a.txt  prob10b.sol  prob10c.sol  prob10c.txt  prob10d.sol  prob10d.txt  prob10e.sol  prob10e.txt  prob15a.sol  prob15a.txt  prob15b.sol  prob15b.txt  prob15c.sol  prob15c.txt  prob15d.sol  prob15d.txt  prob15e.sol  prob15e.txt  prob20a.sol  prob20a.txt  prob20b.sol  prob20b.txt  prob20c.sol  prob20c.txt  prob20d.sol  prob20d.txt  prob20e.sol  prob20e.txt  prob25a.sol  prob25a.txt  prob25b.sol  prob25b.txt  prob25c.sol  prob25c.txt  prob25d.sol  prob25d.txt  prob25e.sol  prob25e.txt  (+30 more)
instances/Grubhub/: grubhub-02-0.pdt  grubhub-02-1.pdt  grubhub-02-2.pdt  grubhub-02-3.pdt  grubhub-02-4.pdt  grubhub-02-5.pdt  grubhub-02-6.pdt  grubhub-02-7.pdt  grubhub-02-8.pdt  grubhub-02-9.pdt  grubhub-03-0.pdt  grubhub-03-1.pdt  grubhub-03-2.pdt  grubhub-03-3.pdt  grubhub-03-4.pdt  grubhub-03-5.pdt  grubhub-03-6.pdt  grubhub-03-7.pdt  grubhub-03-8.pdt  grubhub-03-9.pdt  grubhub-04-0.pdt  grubhub-04-1.pdt  grubhub-04-2.pdt  grubhub-04-3.pdt  grubhub-04-4.pdt  grubhub-04-5.pdt  grubhub-04-6.pdt  grubhub-04-7.pdt  grubhub-04-8.pdt  grubhub-04-9.pdt  grubhub-05-0.pdt  grubhub-05-1.pdt  grubhub-05-2.pdt  grubhub-05-3.pdt  grubhub-05-4.pdt  grubhub-05-5.pdt  grubhub-05-6.pdt  grubhub-05-7.pdt  grubhub-05-8.pdt  grubhub-05-9.pdt  (+100 more)
instances/PDP-X/: X-n1001-k43A.pdt  X-n1001-k43A.sol  X-n1001-k43B.pdt  X-n1001-k43B.sol  X-n1001-k43C.pdt  X-n1001-k43C.sol  X-n101-k25A.pdt  X-n101-k25A.sol  X-n101-k25B.pdt  X-n101-k25B.sol  X-n101-k25C.pdt  X-n101-k25C.sol  X-n106-k14A.pdt  X-n106-k14A.sol  X-n106-k14B.pdt  X-n106-k14B.sol  X-n106-k14C.pdt  X-n106-k14C.sol  X-n110-k13A.pdt  X-n110-k13A.sol  X-n110-k13B.pdt  X-n110-k13B.sol  X-n110-k13C.pdt  X-n110-k13C.sol  X-n115-k10A.pdt  X-n115-k10A.sol  X-n115-k10B.pdt  X-n115-k10B.sol  X-n115-k10C.pdt  X-n115-k10C.sol  X-n120-k6A.pdt  X-n120-k6A.sol  X-n120-k6B.pdt  X-n120-k6B.sol  X-n120-k6C.pdt  X-n120-k6C.sol  X-n125-k30A.pdt  X-n125-k30A.sol  X-n125-k30B.pdt  X-n125-k30B.sol  (+560 more)
instances/RBO00/Class1/: BIER127A.PDT  BIER127A.sol  BIER127B.PDT  BIER127B.sol  BIER127C.PDT  BIER127C.sol  D197A.PDT  D197A.sol  D197B.PDT  D197B.sol  D197C.PDT  D197C.sol  D493A.PDT  D493A.sol  D493B.PDT  D493B.sol  D493C.PDT  D493C.sol  EIL101A.PDT  EIL101A.sol  EIL101B.PDT  EIL101B.sol  EIL101C.PDT  EIL101C.sol  EIL51A.PDT  EIL51A.sol  EIL51B.PDT  EIL51B.sol  EIL51C.PDT  EIL51C.sol  EIL75A.PDT  EIL75A.sol  EIL75B.PDT  EIL75B.sol  EIL75C.PDT  EIL75C.sol  FL417A.PDT  FL417A.sol  FL417B.PDT  FL417B.sol  (+176 more)
instances/RBO00/Class2/: N101p1.pdt  N101p1.sol  N101p10.pdt  N101p10.sol  N101p2.pdt  N101p2.sol  N101p3.pdt  N101p3.sol  N101p4.pdt  N101p4.sol  N101p5.pdt  N101p5.sol  N101p6.pdt  N101p6.sol  N101p7.pdt  N101p7.sol  N101p8.pdt  N101p8.sol  N101p9.pdt  N101p9.sol  N201p1.pdt  N201p1.sol  N201p10.pdt  N201p10.sol  N201p2.pdt  N201p2.sol  N201p3.pdt  N201p3.sol  N201p4.pdt  N201p4.sol  N201p5.pdt  N201p5.sol  N201p6.pdt  N201p6.sol  N201p7.pdt  N201p7.sol  N201p8.pdt  N201p8.sol  N201p9.pdt  N201p9.sol
